--- a/src/App.css
+++ b/src/App.css
@@ -17,11 +17,11 @@ card-tr{
 }
 .card-wrapper{
   height:  400px;
-  width: 25%;
+  width: 22%;
   display: flex;
   flex-wrap: column;
   padding: 20px 20px;
-  background-color: blanchedalmond;
+  background-color: rgb(118, 177, 224);
 }
 .card-top{
   width: 100%;  
@@ -42,8 +42,6 @@ card-tr{
   height: 30px;
   padding: 1px 1px !important;
   text-align: center;
-  
-
 }
 .task-container{
   height:  400px;
